@@ -1,4 +1,4 @@
 DIST google-perftools-1.3.tar.gz 1120884 RMD160 eaf7827eba6307783a13aabb29bce318ffe5cf3b SHA1 fcf5b13a377bbea486b6fe32a8d2cac61c0afa51 SHA256 5f3acc39151094a4aca560fc63ca69ce438015d42a814fb1f5fe1ce3796a98c7
-EBUILD google-perftools-1.3.ebuild 577 RMD160 3d52dc5765a9f76512e590b301131b576d386d7a SHA1 575d28593686eec93853a73981e37311e5a9076d SHA256 096cd2a7a3787a2036040c879c6ca232eddc37a457811a6aaa120792641045a0
-MISC ChangeLog 244 RMD160 c232a99794d7a9cbfb294ef2d6544ce581beccf7 SHA1 b2ef665a4bd2723f00681d22fe0d80d4531960de SHA256 574e604de15af3a2460b0a1f4f0f75b8d2ad55aedf407e53471e86393dd5ee91
+EBUILD google-perftools-1.3.ebuild 574 RMD160 004a198f552dfd969d3b72f62f05995f899b8a0b SHA1 771c0f0bfcfab14b3a01909bdd0eeeae2ba1a1ec SHA256 935b43da1dd01810f8a3c3f8cb6863a5f1d43d5bea4f077eb2b3ba5afb179f27
+MISC ChangeLog 342 RMD160 68ed5856819c25012bb88bb8f139e8f116c855fa SHA1 4bd3bb62e1e0e270bb6680b376c3af9d4f51588e SHA256 4e74f9c6d9aee471c87a822b2d974c04b0b74e67d8cd4edeabd545699b005d01
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
