@@ -1,9 +1,10 @@
 AUX nginx-r1 1645 RMD160 d032feec43e4ba31ac5b6fffec478ebbeb49db60 SHA1 49f0db3efaccd3cef545b8c68cfa557ca829352f SHA256 b263a663399d2897dfdf53226d45fc3707bc9230bd687b8003d075a48f60ecaf
 AUX nginx.conf-r4 1473 RMD160 012556820bf2fe804454822cf88dbeb107a48715 SHA1 b0001ae5ab7fc9897ec27e3e40b34b09d5b06da3 SHA256 d8267e217a19283b0d972ad9f74348c467b8629583ebea27d5ee90b9e7669070
+DIST Ngx_rrd_graph-0.1.tar.gz 4005 RMD160 7ae96d110e748b2f4457545440c777918c145b0b SHA1 1428a7cecdad89de031f829b3fa485a8832b3f62 SHA256 e018221eba4ac91b5cbaabd440c2da72675c8432be12e001321293014a3d87e7
 DIST nginx-0.8.13.tar.gz 604752 RMD160 39c0473e9cb1b4910321ec243c149c5f582b75d7 SHA1 de1b13511eac4c68d417d74806771f08d874f565 SHA256 916f8dd8d9bdae3b39f9c63f3469291d4afb05e4ddf7c39ef377ea69c484f2fb
 DIST nginx_mp4_streaming_public_20081229.tar.bz2 9469 RMD160 ec4c8a0ef86db6cf63f4697546462b127305f5a8 SHA1 ad909c369fa092b6ff457c599213d567a8a66936 SHA256 4908709c50f73d73cb1c16136eaca4b280d8abb60dfd302e79c48f71a68c5d3e
 DIST ngx_http_auth_pam_module-1.1.tar.gz 5193 RMD160 38437a1f5d34f93b22abb9f0a7181be756356d33 SHA1 d04065a512169925dda8bce710e1dc5012cac47b SHA256 ea9da5f106b952729398248cddabbe25f7a5752993e91c9b8252dbc2b03b8ecd
-EBUILD nginx-0.8.13-r10.ebuild 4539 RMD160 e24d5c5a82c08c058dd338474b5b7b371c2dcad3 SHA1 c11853a4eb97bd94d2d5ec2baf6f47d0d888397f SHA256 42963283ca2bf47aeec42b9c386c04d9a178221c11de3fe31108b7d2ce692ca3
-EBUILD nginx-0.8.13.ebuild 3667 RMD160 0437ccf36ec60ada554380508b26c2e6e83765ac SHA1 c9264c47dab7f5dc7009c8cbc89220a4780c1ba8 SHA256 bd995fda23a1b3b4604955fcd462d28a85723ca159fbf8f7ecde97337db05a9d
-MISC ChangeLog 116 RMD160 63dcca5eb9c152b59200f65557b577e1993890ce SHA1 af1a2c23e682129db1862ff0c2005a1dbff62da5 SHA256 8f885dd122ef14504a7f2f0b0e5351777d32176c50e38565a99139eef718e268
-MISC metadata.xml 1285 RMD160 091e7669260c1148d008fe42c2e13bb23af6dc42 SHA1 2a392b897de386bfdac2d48e855383a5d698ed61 SHA256 e3a1b4e8dda181ea5c383aaf90c23988d1b18a9993d79fbf12229867b73c8b4f
+EBUILD nginx-0.8.13-r10.ebuild 4889 RMD160 1e577e2d6dc192a18f50668e416b4b7e4afb4fbb SHA1 1cdb34a8306a8ff7f75575f33649c40f2bf5ffb3 SHA256 425431747032371169c6545b85362199659017394ea95f67d50ffc3c402995d1
+EBUILD nginx-0.8.13.ebuild 3652 RMD160 08a904087f89ad9316ccf93d491f0c87e2fde1bc SHA1 83b52ff4e7fed1175e09f4de795b3ef3765093f9 SHA256 032c363662e83caeebbdd6fd2796689635b35f363a35f92e3ece39d9df7c3d79
+MISC ChangeLog 243 RMD160 ca59a8331f989a31c52085575f8948b7097f8be5 SHA1 ae11d1d2a1f550aff6f3c077dea1e7140f1f33fa SHA256 c190c0801ab4a06de63c1560961a7ea3e14166f7f1adfcf15edb0d065bdadb9e
+MISC metadata.xml 1338 RMD160 3586b779c10dab5eaacbef98ddbe23196a2de648 SHA1 31af3d4de39856167e0095230494b86d02416b48 SHA256 0e72f15f93867c9865c7a1360d1b32a94d0b59d60805b454184a78513d2c6148
