@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  google-perftools-1.3.ebuild:
+  add ~amd64
+
   04 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +google-perftools-1.3.ebuild, +metadata.xml:
   initial commit
